<resources>
    <string name="app_name">MvvmWithFlow</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="email_or_username">Enter email or username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Signup</string>
    <string name="enter_four_digit_otp">Enter 4 digit code</string>
    <string name="resend_otp">Resend OTP</string>

    <string name="account_balance">Account Balance</string>
    <string name="balance_currency">$</string>
    <string name="balance_amount">524.99</string>
    <string name="today_appointments">Today Appointments</string>
    <string name="explore">Explore</string>
    <string name="home">Home</string>
    <string name="patients">Patients</string>
    <string name="appointments">Appointments</string>
    <string name="chat">Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>

    <string name="srn_drawer_open">Open</string>
    <string name="srn_drawer_close">Close</string>

    <string name="srn_ex_no_menu_view">No view for menu provided. You must either call .withMenuView(View) or pass a valid resource id to .withMenuLayout(int)</string>
    <string name="srn_ex_bad_content_view">Your content view must contain exactly one child. Make sure you call inject() after setContentView().</string>
    <string name="scheduled">Scheduled</string>

</resources>